Actualizar proyecto y aplicar .gitignore

--- a/src/scss/PrincipalesFront/_Inicio.scss
+++ b/src/scss/PrincipalesFront/_Inicio.scss
@@ -30,3 +30,23 @@
         }
     }
 }
+
+.carousel {
+    .carousel-slide p{
+        border-radius: 10px;
+    }
+}
+
+a.botonUb_mobile{
+    border-radius: 10px;
+}
+
+.divisiondeinfo{
+    a{
+        border-radius: 10px;
+    }
+}
+
+.RedesSocialesInicio #botonRedes{
+    border-radius: 10px;
+}
