--- a/src/scss/PrincipalesFront/_Ubicaciones.scss
+++ b/src/scss/PrincipalesFront/_Ubicaciones.scss
@@ -2,16 +2,14 @@
     @import 'bootstrap';
 
     .carousel-inner{
-        width: 95%;
+        width: 80%;
         margin: 2% auto;
     }
 
     .carousel-control-next-icon,
     .carousel-control-prev-icon{
-        border-radius: 50%;
-        padding: 1em;
-        width: 3em;
-        height: 3em;
+        width: 8vw;
+        height: 8vw;
         margin-top: 5rem;
         filter: invert(52%) sepia(25%) saturate(590%) hue-rotate(343deg) brightness(95%) contrast(85%);
     }
