--- a/src/scss/PrincipalesFront/_Composta.scss
+++ b/src/scss/PrincipalesFront/_Composta.scss
@@ -1,3 +1,5 @@
+@use 'Base/Variables' as v;
+@use 'Base/Mixins' as m;
 
 .Composta_sect{
     .ProcesoComposta{ 
@@ -7,4 +9,42 @@
     }
 
     }
+}
+.ProcesoComposta p{
+    font-size: 3.8vw !important;
+    width: 90% !important;
+}
+
+.Composta_sect{
+    .FotosSectionComp{
+
+        .carousel{
+            left: 0 !important;
+            top: 0 !important;
+            width: 100% !important;
+        }
+        .Fondo{
+            position: relative !important;
+        }
+        .CarruselBootstrapComp{
+            @import 'bootstrap';
+            position: absolute;
+            top: 25%;
+            left: 28%;
+            width: 46%;
+        
+        }
+    }
+}
+
+.Composta_sect .FotosSectionComp .CarruselBootstrapComp .carousel-indicators{
+    margin-bottom: -1.5rem !important;
+}
+.Composta_sect .FotosSectionComp .CarruselBootstrapComp .carousel-indicators [data-bs-target]{
+    border: 2px solid v.$Cafe;
+        border-radius: 1em;
+}
+
+.Composta_sect .FotosSectionComp .CarruselBootstrapComp .carousel-indicators .active{
+    background-color: v.$CafeUbicaciones;
 }
