--- a/src/scss/PrincipalesFront/_Ubicaciones.scss
+++ b/src/scss/PrincipalesFront/_Ubicaciones.scss
@@ -1,3 +1,7 @@
+@use 'Base/Mixins' as m;
+@use 'Base/Variables' as v;
+
+
 .CarruselParaUbicacionesBootstrap{
     @import 'bootstrap';
 
@@ -12,5 +16,16 @@
         height: 8vw;
         margin-top: 5rem;
         filter: invert(52%) sepia(25%) saturate(590%) hue-rotate(343deg) brightness(95%) contrast(85%);
+    }
+}
+
+.Ubicaciones p{
+    font-size: 4vw !important;
+    width: 90% !important;
+    @include m.tablet{
+        font-size: 2.5vw !important;
+    }
+    @include m.desktop{
+        font-size: 2.2vw !important;
     }
 }
