Aplicar .gitignore y preparar push limpio

--- a/src/scss/ModulosGenerales/_animacionUb.scss
+++ b/src/scss/ModulosGenerales/_animacionUb.scss
@@ -57,7 +57,7 @@
                 margin-bottom: 0;
             }
             p.TexCif {
-                width: 30rem !important;
+                width: 85vw !important;
                 @include m.tablet{
                     width: 30% !important;
                 }
