--- a/src/scss/ModulosGenerales/_footer.scss
+++ b/src/scss/ModulosGenerales/_footer.scss
@@ -4,3 +4,85 @@
 footer{
     margin-top: 0 !important;
 }
+
+//Modificacion completa de footer
+.formulario {
+    grid-template-columns: 1fr !important;
+    grid-template-rows: auto auto auto !important;
+    justify-items: center !important;
+    @include m.tablet{
+        grid-template-columns: 2fr 1fr !important;
+        grid-template-rows: auto auto !important;
+    }
+    .item1{
+        grid-column: 1 !important;
+        grid-row: 1 !important;
+        @include m.tablet{
+            padding-left: 10% !important;
+        }
+        p{
+            text-align: center;
+            font-size: 3rem !important;
+            @include m.tablet{
+                text-align: left;
+            }
+        }
+        textarea{
+            width: 90% !important;
+            padding: 2% !important;
+            height: 50% !important;
+            display: block;
+            margin: auto;
+            margin-bottom: 3%;
+            @include m.tablet{
+                margin-bottom: .5em;
+                width: 100% !important;
+                padding: .5em !important;
+                height: 2.5em !important;
+            }
+        }
+        .boton{
+            margin-left: 0 !important;
+            float: inline-end;
+            margin-right: 5%;
+            @include m.tablet{
+                margin-right: 2%;
+            }
+        }
+    }
+    .sincursor{
+        grid-column: 1 !important;
+        grid-row: 3 !important;
+        text-align: center;
+        width: 15em;
+        font-size: 3.5vw;
+        @include m.tablet{
+            grid-column: 1 !important;
+            grid-row: 2 !important;
+            width: 100%;
+            font-size: .9em;
+        }
+        @include m.desktop{
+            font-size: 1.2em;
+        }
+    }
+    .item3{
+        display: flex;
+        grid-column: 1 !important;
+        grid-row: 2 !important;
+        @include m.tablet{
+            display: block;
+            grid-column: 2 !important;
+            grid-row: 1 !important;
+        }
+        p{
+            text-align: center;
+            font-size: 4vw;
+            @include m.tablet{
+                text-align: left;
+                font-size: 1em;
+            }
+        }
+
+    }
+}
